syntax = "proto3";
package helloworld;
service Greeter {
    /* rpc SayHello (HelloRequest) returns (HelloReply); */
    rpc QueryMeta (SongName) returns (SongMeta);
    rpc AddMeta (SongMeta) returns (AddResult);
}

// QueryMeta input
message SongName {
   string song_name = 1;
}

// QueryMeta output
// AddMeta input
message SongMeta {
    string name = 1;
    string artist = 2;
    string album = 3;
    string artwork = 4;
    string lyrics = 5;
}

// AddResult result
message AddResult {
   string result = 1;
}
